@@ -1016,6 +1016,33 @@ name|boolean
 name|shouldBePublic
 parameter_list|)
 block|{
+if|if
+condition|(
+operator|!
+name|isRoot
+argument_list|()
+operator|&&
+operator|(
+name|data
+operator|.
+name|getReport
+argument_list|()
+operator|!=
+literal|null
+operator|)
+condition|)
+block|{
+name|data
+operator|.
+name|getReport
+argument_list|()
+operator|.
+name|addDependency
+argument_list|(
+name|this
+argument_list|)
+expr_stmt|;
+block|}
 name|boolean
 name|loaded
 init|=
@@ -1101,16 +1128,6 @@ name|getModuleId
 argument_list|()
 operator|+
 literal|": check your configuration"
-argument_list|)
-expr_stmt|;
-name|data
-operator|.
-name|getReport
-argument_list|()
-operator|.
-name|addDependency
-argument_list|(
-name|this
 argument_list|)
 expr_stmt|;
 return|return
@@ -1346,16 +1363,6 @@ operator|new
 name|RuntimeException
 argument_list|(
 literal|"impossible to resolve dynamic revision"
-argument_list|)
-expr_stmt|;
-name|data
-operator|.
-name|getReport
-argument_list|()
-operator|.
-name|addDependency
-argument_list|(
-name|this
 argument_list|)
 expr_stmt|;
 return|return
@@ -1673,16 +1680,6 @@ operator|==
 literal|null
 condition|)
 block|{
-name|data
-operator|.
-name|getReport
-argument_list|()
-operator|.
-name|addDependency
-argument_list|(
-name|this
-argument_list|)
-expr_stmt|;
 return|return
 literal|false
 return|;
@@ -1810,16 +1807,6 @@ name|hasProblem
 argument_list|()
 condition|)
 block|{
-name|data
-operator|.
-name|getReport
-argument_list|()
-operator|.
-name|addDependency
-argument_list|(
-name|this
-argument_list|)
-expr_stmt|;
 return|return
 name|handleConfiguration
 argument_list|(
@@ -2529,16 +2516,6 @@ name|parentConf
 argument_list|)
 expr_stmt|;
 block|}
-name|data
-operator|.
-name|getReport
-argument_list|()
-operator|.
-name|addDependency
-argument_list|(
-name|this
-argument_list|)
-expr_stmt|;
 return|return
 literal|false
 return|;
@@ -2590,16 +2567,6 @@ operator|+
 literal|" "
 operator|+
 name|parentConf
-argument_list|)
-expr_stmt|;
-name|data
-operator|.
-name|getReport
-argument_list|()
-operator|.
-name|addDependency
-argument_list|(
-name|this
 argument_list|)
 expr_stmt|;
 return|return
