@@ -33,6 +33,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Arrays
 import|;
 end_import
@@ -7891,9 +7901,12 @@ block|}
 argument_list|)
 argument_list|)
 decl_stmt|;
-name|Set
+name|List
 name|revisions
 init|=
+operator|new
+name|ArrayList
+argument_list|(
 name|report
 operator|.
 name|getConfigurationReport
@@ -7903,6 +7916,7 @@ argument_list|)
 operator|.
 name|getModuleRevisionIds
 argument_list|()
+argument_list|)
 decl_stmt|;
 name|assertTrue
 argument_list|(
@@ -7916,106 +7930,90 @@ operator|>=
 literal|3
 argument_list|)
 expr_stmt|;
-comment|// verify the first 3 modules against the ones in the ivy file
-name|Iterator
-name|it
+name|int
+name|mod12Index
 init|=
 name|revisions
 operator|.
-name|iterator
-argument_list|()
-decl_stmt|;
-name|ModuleRevisionId
-name|revId1
-init|=
-operator|(
-name|ModuleRevisionId
-operator|)
-name|it
-operator|.
-name|next
-argument_list|()
-decl_stmt|;
-name|assertEquals
+name|indexOf
 argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
 literal|"mod1.2"
 argument_list|,
-name|revId1
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
 literal|"1.1"
-argument_list|,
-name|revId1
-operator|.
-name|getRevision
-argument_list|()
 argument_list|)
-expr_stmt|;
-name|ModuleRevisionId
-name|revId2
-init|=
-operator|(
-name|ModuleRevisionId
-operator|)
-name|it
-operator|.
-name|next
-argument_list|()
+argument_list|)
 decl_stmt|;
-name|assertEquals
+name|int
+name|mod32Index
+init|=
+name|revisions
+operator|.
+name|indexOf
 argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org3"
+argument_list|,
 literal|"mod3.2"
 argument_list|,
-name|revId2
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
 literal|"1.4"
-argument_list|,
-name|revId2
-operator|.
-name|getRevision
-argument_list|()
 argument_list|)
-expr_stmt|;
-name|ModuleRevisionId
-name|revId3
-init|=
-operator|(
-name|ModuleRevisionId
-operator|)
-name|it
-operator|.
-name|next
-argument_list|()
+argument_list|)
 decl_stmt|;
-name|assertEquals
+name|int
+name|mod51Index
+init|=
+name|revisions
+operator|.
+name|indexOf
 argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org5"
+argument_list|,
 literal|"mod5.1"
 argument_list|,
-name|revId3
-operator|.
-name|getName
-argument_list|()
+literal|"4.2"
+argument_list|)
+argument_list|)
+decl_stmt|;
+comment|// verify the order of the modules in the ivy file
+name|assertTrue
+argument_list|(
+literal|"[ org1 | mod1.2 | 1.1 ] was not found"
+argument_list|,
+name|mod12Index
+operator|>
+operator|-
+literal|1
 argument_list|)
 expr_stmt|;
-name|assertEquals
+name|assertTrue
 argument_list|(
-literal|"4.2"
+literal|"[ org1 | mod1.2 | 1.1 ] must come before [ org3 | mod3.2 | 1.4 ]"
 argument_list|,
-name|revId3
-operator|.
-name|getRevision
-argument_list|()
+name|mod12Index
+operator|<
+name|mod32Index
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"[ org3 | mod3.2 | 1.4 ] must come before [ org5 | mod5.1 | 4.2 ]"
+argument_list|,
+name|mod32Index
+operator|<
+name|mod51Index
 argument_list|)
 expr_stmt|;
 block|}
